--- a/source/_posts/2013-07-22-refresh.markdown
+++ b/source/_posts/2013-07-22-refresh.markdown
@@ -9,4 +9,4 @@ categories:
 ---
 Just refreshed github project with Octopress contents.
 
-Stay tuned for new blog posts :)
+Stay tuned for more new blog posts :)
